--- a/Portal_noticia/style.css
+++ b/Portal_noticia/style.css
@@ -17,10 +17,13 @@ header .container{
 
 header li {
     display: inline;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
 }
 
 header li a{
     color: #f5f6fa;
+    text-decoration: none;
 }
 
 .container {
@@ -35,7 +38,8 @@ header li a{
 }
 
 .articles article img{
-    height: 180px;
+    /* height: 180px; */
+    width: 100%;
 }
 
 .articles article{
@@ -53,6 +57,7 @@ section h2,
 
 .articles article h3{
     margin: 16px 0;
+    font-size: 24px;
 }
 
 .articles article a{
@@ -61,4 +66,33 @@ section h2,
     padding: 6px;
     color: rgb(131, 20, 20);
     display: inline-block;
+    font-weight: 700;
+    margin-top: 8px;
+}
+
+#sport .articles article a:hover, 
+#economy .articles article a:hover{
+    text-decoration: underline;
+    background-color: rgba(131, 20, 20, 0.4);
+}
+
+.articles article a, 
+.articles article p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#sport{
+    background-color:rgba(0, 255, 0, 0.1);
+}
+
+#sport .articles article a{
+    background-color: #009432;
+}
+
+#economy{
+    background-color: rgba(255, 243, 176, 0.8);
+}
+
+#economy .articles article a{
+    background-color: rgb(234, 204, 32);
 }
